@@ -1,6 +1,10 @@
 FlightPath 6.x Changelog
 ========================
  
+2021-07-08
+  Cleaning up code, adding more content to render array system.  Cleaning up malformed HTML.
+   
+ 
 2021-07-07
   Converted advise_display_view to use render array system. 
   
